--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,24 +9,45 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 100s linear;
   }
+}
+
+.NavBar {
+  background-color: #010a1b;
+  color: white;
+  height: 8vh;
+  display: flex;
+  padding: 0px 10px;
+  align-items: center;
+}
+
+a {
+  color: #FFF;
+  text-decoration: none;
+}
+a:hover {
+   color: rgb(161, 161, 161)
+}
+
+.NavBar > div {
+  padding: 10px;
+  color: white;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  padding-bottom: 10px;
+  height: 100vh;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #159fc5;
 }
 
 @keyframes App-logo-spin {
