--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,6 +30,14 @@ a:hover {
    color: rgb(161, 161, 161)
 }
 
+.pfp {
+  max-width:20%;
+  height:auto;
+  border-radius: 50%;
+  margin-top: 2em;
+  box-shadow: 0px 0px 1em;
+}
+
 .NavBar > div {
   padding: 10px;
   color: white;
