--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,6 +1,6 @@
 /* General Styles */
 * {
-  font-family: 'Arvo', serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 a {
@@ -16,6 +16,19 @@ hr {
   width: 80%;
 }
 
+p {
+  font-size: 1.5em;
+}
+
+.fade {
+  animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 /* App */
 .App {
   text-align: center;
@@ -23,6 +36,8 @@ hr {
 
 .content {
   padding: 0em 10em;
+  transition: opacity 0.5s;
+  opacity: 1;
 }
 
 /* Home */
@@ -41,6 +56,14 @@ hr {
   margin-top: 2em;
   box-shadow: 0px 0px 1em;
   transition: border-radius 1s, width 1s;
+}
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
 }
 
 .pfp:hover {
